--- a/tutorials/cell-editor.html
+++ b/tutorials/cell-editor.html
@@ -2,10 +2,10 @@
 
   <div class="index-list">
     <ul>
-      <li><a href="#page-editor-manager-responsibility">Responsibility of EditorManager class</a></li>
-      <li><a href="#page-inheritance-of-editors">Inheritance of editors</a></li>
-      <li><a href="#page-creating-custom-editor">How to create a custom editor</a></li>
-      <li><a href="#page-registering-an-editor">Registering an editor</a></li>
+      <li><a href="#page-editor-manager-responsibility">EditorManagerクラスの役割</a></li>
+      <li><a href="#page-inheritance-of-editors">エディターの継承</a></li>
+      <li><a href="#page-creating-custom-editor">自分だけのエディターの作り方</a></li>
+      <li><a href="#page-registering-an-editor">エディターを登録する</a></li>
     </ul>
   </div>
 
